Change some Style

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 
 		<div class="choices">
 			<div class="choice" id="r">
-				<img src="rock.jpg" alt="ROCK">
+				<img src="stones.svg" alt="ROCK" id="stone">
+
 			</div>
 			<div class="choice" id="p">
-				<img src="paper.jpg" alt="PAPER">
+				<img src="papers.svg" alt="PAPER" id="paper">
 			</div>
 			<dir class="choice" id="s">
-				<img src="scissor.jpg" alt="SCISSOR">
+				<img src="scissorss.svg" alt="SCISSOR" id="scissor">
 			</dir>
 			<p id="action-message">	Make your move</p>
 		</div>
